routing/argo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-route
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^argo\..+$`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          port: 443
          serversTransport: no-verify-tls
