routing/dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-route
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^dashboard\..+$`)
      kind: Rule
      services:
        - name: dashboard-kong-proxy
          namespace: monitoring
          port: 443
          serversTransport: no-verify-tls3
