routing/grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^grafana\..+$`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: 80
