routing/nginx.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-hello-world-route
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^nginx\..+$`)
      kind: Rule
      services:
        - name: nginx-hello-world
          namespace: apps
          port: 80
